--- a/index.html
+++ b/index.html
@@ -3,77 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Escanear QR</title>
-    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
+    <title>Mostrar Cámara</title>
     <style>
-        #reader {
+        #video {
             width: 100%;
-            height: 100%;
-        }
-        #scanned-result {
-            margin-top: 20px;
+            height: auto;
+            border: 1px solid black;
         }
     </style>
 </head>
 <body>
-    <h1>Escanear QR</h1>
-    <button id="start-scan">Escanea</button>
-    <div id="reader" style="display: none;"></div>
-    <div id="scanned-result"></div>
+    <h1>Vista de la Cámara</h1>
+    <video id="video" autoplay></video>
 
     <script>
-        const startScanButton = document.getElementById('start-scan');
-        const readerElement = document.getElementById('reader');
-        const scannedResultElement = document.getElementById('scanned-result');
-
-        let html5QrCode;
-
-        startScanButton.addEventListener('click', () => {
-            if (!html5QrCode) {
-                html5QrCode = new Html5Qrcode("reader");
-
-                // Este método obtiene los dispositivos de video disponibles
-                Html5Qrcode.getCameras().then(devices => {
-                    if (devices && devices.length) {
-                        // Encuentra la cámara trasera
-                        const rearCamera = devices.find(device => device.facingMode === "environment");
-                        if (rearCamera) {
-                            html5QrCode.start(
-                                { facingMode: "environment", deviceId: { exact: rearCamera.id } },
-                                {
-                                    fps: 10,
-                                    qrbox: { width: 250, height: 250 }
-                                },
-                                (decodedText, decodedResult) => {
-                                    scannedResultElement.innerText = `Código QR detectado: ${decodedText}`;
-                                    html5QrCode.stop();
-                                },
-                                (errorMessage) => {
-                                    // Puedes manejar el error aquí si es necesario
-                                }
-                            ).catch((err) => {
-                                console.error("Error al iniciar el escáner: ", err);
-                            });
-                            readerElement.style.display = 'block';
-                        } else {
-                            scannedResultElement.innerText = "No se encontró la cámara trasera.";
-                        }
-                    } else {
-                        scannedResultElement.innerText = "No se encontraron cámaras.";
-                    }
-                }).catch(err => {
-                    console.error("Error al obtener cámaras: ", err);
-                });
-            } else {
-                html5QrCode.start({
-                    facingMode: "environment"
-                }, {
-                    fps: 10,
-                    qrbox: { width: 250, height: 250 }
-                });
-                readerElement.style.display = 'block';
-            }
-        });
+        // Accede a la cámara del usuario
+        navigator.mediaDevices.getUserMedia({ video: true })
+            .then(stream => {
+                // Muestra el video en el elemento de video
+                document.getElementById('video').srcObject = stream;
+            })
+            .catch(error => {
+                console.error('Error al acceder a la cámara: ', error);
+            });
     </script>
 </body>
 </html>
