--- a/index.html
+++ b/index.html
@@ -45,7 +45,26 @@
     <!-- Incluye la biblioteca jsQR -->
     <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
 
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.1.0/firebase-firestore.js"></script>
+
     <script>
+        // Tu configuración de Firebase
+        const firebaseConfig = {
+            apiKey: "AIzaSyDJg1Kag-ttvBkWI-AO2Mvsj4GnSRbd74E",
+            authDomain: "authenticationqr-a08d4.firebaseapp.com",
+            projectId: "authenticationqr-a08d4",
+            storageBucket: "authenticationqr-a08d4.appspot.com",
+            messagingSenderId: "230256201537",
+            appId: "1:230256201537:web:7696b4351c13d4e95a9bc0",
+            measurementId: "G-LQD0PNH8PT"
+        };
+
+        // Inicializar Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+
         const video = document.getElementById('video');
         const canvas = document.getElementById('canvas');
         const photo = document.getElementById('photo');
