--- a/index.html
+++ b/index.html
@@ -44,100 +44,7 @@
 
     <!-- Incluye la biblioteca jsQR -->
     <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
+    <script src="script.js"></script> <!-- Mueve el script aquí -->
 
-    <script>
-        const video = document.getElementById('video');
-        const canvas = document.getElementById('canvas');
-        const photo = document.getElementById('photo');
-        const output = document.getElementById('output');
-        const scoreDisplay = document.getElementById('score');
-        let score = 0;
-        let currentUser = null;
-
-        // Accede a la cámara trasera
-        function startCamera() {
-            navigator.mediaDevices.getUserMedia({ video: { facingMode: { ideal: "environment" } } })
-            .then(stream => {
-                video.srcObject = stream;
-            })
-            .catch(error => {
-                console.error('Error al acceder a la cámara: ', error);
-                alert('No se puede acceder a la cámara, verifica los permisos.');
-            });
-        }
-
-        // Registro
-        document.getElementById('register-btn').addEventListener('click', () => {
-            console.log('Botón de registro presionado');
-            const username = document.getElementById('register-username').value;
-            const password = document.getElementById('register-password').value;
-
-            if (username && password) {
-                // Guarda el usuario en localStorage
-                localStorage.setItem(username, JSON.stringify({ password: password, score: 0 }));
-                alert('Registro exitoso. Ahora puedes iniciar sesión.');
-                console.log(`Usuario registrado: ${username}`);
-            } else {
-                alert('Por favor, completa los campos.');
-                console.log('Faltan datos en el formulario de registro');
-            }
-        });
-
-        // Inicio de sesión
-        document.getElementById('login-btn').addEventListener('click', () => {
-            console.log('Botón de inicio de sesión presionado');
-            const username = document.getElementById('login-username').value;
-            const password = document.getElementById('login-password').value;
-
-            const user = JSON.parse(localStorage.getItem(username));
-
-            if (user && user.password === password) {
-                // Inicio de sesión exitoso
-                currentUser = username;
-                score = user.score;
-                document.getElementById('auth').style.display = 'none';
-                document.getElementById('app').style.display = 'block';
-                document.getElementById('user-name').textContent = username;
-                scoreDisplay.textContent = score;
-                startCamera();
-                console.log(`Usuario ${username} inició sesión con éxito`);
-            } else {
-                alert('Usuario o contraseña incorrectos.');
-                console.log('Datos incorrectos en el inicio de sesión');
-            }
-        });
-
-        // Función para escanear QR
-        document.getElementById('take-photo').addEventListener('click', () => {
-            console.log('Escaneo de código QR iniciado');
-            canvas.width = video.videoWidth;
-            canvas.height = video.videoHeight;
-            const context = canvas.getContext('2d');
-            context.drawImage(video, 0, 0, canvas.width, canvas.height);
-            const imageData = context.getImageData(0, 0, canvas.width, canvas.height);
-            const qrCode = jsQR(imageData.data, canvas.width, canvas.height);
-
-            if (qrCode) {
-                output.textContent = `Código QR detectado: ${qrCode.data}`;
-                console.log(`Código QR detectado: ${qrCode.data}`);
-                if (qrCode.data === "1") {
-                    score++;
-                } else if (qrCode.data === "0") {
-                    score = 0;
-                    alert('¡Lo lograste! Tienes un café gratis hoy.');
-                }
-                scoreDisplay.textContent = score;
-
-                // Guarda el marcador del usuario
-                const userData = JSON.parse(localStorage.getItem(currentUser));
-                userData.score = score;
-                localStorage.setItem(currentUser, JSON.stringify(userData));
-                console.log(`Puntuación actualizada para el usuario ${currentUser}: ${score}`);
-            } else {
-                output.textContent = 'No se detectó ningún código QR.';
-                console.log('No se detectó ningún código QR');
-            }
-        });
-    </script>
 </body>
 </html>
