--- a/index.html
+++ b/index.html
@@ -31,20 +31,9 @@
         </div>
     </div>
 
-    <!-- Aplicación principal -->
-    <div id="app">
-        <h1>Bienvenido, <span id="user-name"></span></h1>
-        <p>Marcador: <span id="score">0</span></p>
-        <video id="video" autoplay playsinline></video>
-        <button id="take-photo">Escanear Código QR</button>
-        <canvas id="canvas" style="display: none;"></canvas>
-        <img id="photo" src="" alt="Foto tomada" style="display: none;">
-        <div id="output">Esperando código QR...</div>
-    </div>
-
     <!-- Incluye la biblioteca jsQR -->
     <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
-    <script src="script.js"></script> <!-- Mueve el script aquí -->
+    <script src="script.js"></script>
 
 </body>
 </html>
